fix: resolve tailwind error

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 // src/layouts/BaseLayout.astro --- MODIFICAR CON DATOS REALES
-// import '@/styles/global.css';---------------------Revisar por que esta dando error
+import '@/styles/global.css';
 import { ToastProvider } from '@/components/ui/Toast';
 
 interface Props {
