--- a/src/components/layout/MobileMenu.astro
+++ b/src/components/layout/MobileMenu.astro
@@ -48,7 +48,7 @@ function isActive(path: string) {
     
     <!-- CTA Button -->
     <div class="mt-8">
-      <a href="/cotizacion" class="btn-primary w-full text-center">
+      <a href="/cotizacion" class="btn btn-primary w-full text-center">
         Cotizar Evento
       </a>
     </div>
